--- a/assets/styles/elements.scss
+++ b/assets/styles/elements.scss
@@ -1,3 +1,7 @@
+$textareaMinHeight: 150px;
+$menuButtonWidth: 100px;
+$modalWidth: 500px;
+
 h1 {
     @include font-pacifico();
     @include small-text-shadow();
@@ -17,7 +21,7 @@ h2 {
 }
 
 textarea {
-    min-height: 150px;
+    @include height-limits($textareaMinHeight);
 }
 
 .menu-buttons-wrap {
@@ -30,13 +34,13 @@ textarea {
 
 .menu-button {
     @include form-element(auto, auto, $color-mainMenuButton, $color-mainMenuButtonBorder);
-    @include flex(0 0 100px, center, center, center);
+    @include flex(0 0 $menuButtonWidth, center, center, center);
     padding: 10px 10px;
     font-size: $fontSize-small;
     text-align: center;
     border-radius: 3px;
     color: $color-primaryWhite;
-    font-weight: bold;
+    font-weight: $fontWeight-bold;
     text-transform: uppercase;
     transition: $time-defaultTransition;
 
@@ -108,7 +112,7 @@ textarea {
         top: 50%;
         padding: 10px;
         transform: translate(-50%, -50%);
-        width: 500px;
+        width: $modalWidth;
         background-color: white;
         border: 1px solid $color-inputBorder;
     }
@@ -123,7 +127,7 @@ textarea {
     text-align: center;
     border-radius: 3px;
     color: $color-primaryWhite;
-    font-weight: bold;
+    font-weight: $fontWeight-bold;
     text-transform: uppercase;
     transition: $time-defaultTransition;
 
@@ -141,7 +145,7 @@ textarea {
     text-align: center;
     border-radius: 3px;
     color: $color-primaryWhite;
-    font-weight: bold;
+    font-weight: $fontWeight-bold;
     text-transform: uppercase;
     transition: $time-defaultTransition;
 
