--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -1,14 +1,12 @@
-$boardsListMaxHeight: 185px;
-$boardsListMinHeight: 123px;
-$boardsListItemHeight: 30px;
-$boardsListItemHeightTablet: 50px;
-$boardsListItemHeightMobile: 60px;
+@import 'menu';
+@import 'boards-list';
+@import 'column';
+@import 'ticket';
+
 $toolItemSize: 20px;
 $addBoardButtonSize: 20px;
 $addColumnFormWidth: 300px;
 $addColumnFormHeight: 60px;
-$ticketMinHeight: 100px;
-$ticketDescriptionMinHeight: 65px;
 $backgroundPreviewHeight: 250px;
 
 body {
@@ -26,143 +24,9 @@ body {
         background-size: cover;
     }
 
-    .main-menu {
-        @include flex();
-        position: absolute;
-        width: 100vw;
-        height: $size-mainMenuHeight;
-        background-color: $color-mainMenuBackground;
-        transition: $time-defaultTransition;
-        border-bottom: 1px solid $color-lightTransparentBlack;
-
-        &:hover {
-            @include big-box-shadow();
-            background-color: $color-mainMenuBackgroundHover;
-            border-bottom: 1px solid $color-mainMenuButtonHover;
-            height: $size-mainMenuHeightHover;
-        }
-    }
-
-    .menu-section {
-        @include flex();
-        height: 100%;
-        padding: 0 20px;
-
-        &.side-section {
-            @include flex(0 0 $size-mainMenuSideElementWidth);
-        }
-
-        .heading {
-            @include flex(1, center, center, center);
-
-            @include mobile {
-                display: none;
-            }
-
-            @include tablet {
-                font-size: $fontSize-large;
-            }
-        }
-    }
-
     .content {
         @include flex(1, center, center, auto, row nowrap);
         height: 100vh;
-
-        .message-bar {
-            @include flex(0 0 $size-messageBarWidth, center, center, center, row wrap);
-
-            @include mobile {
-                @include flex(0 0 $size-messageBarWidthMobile, center, center, center, row wrap);
-            }
-            
-            @include tablet {
-                @include flex(0 0 $size-messageBarWidthTablet, center, center, center, row wrap);
-            }
-
-            .boards-list {
-                @include flex(1, flex-start, flex-start, flex-start, row wrap);
-                @include height-limits($boardsListMinHeight, $boardsListMaxHeight);
-                margin: 5px 6px;
-                overflow-y: auto;
-                border: 1px solid $color-lightTransparentBlack;
-                color: $color-primaryWhite;
-
-                .list-item {
-                    @include font-varela();
-                    width: 100%;
-                    height: $boardsListItemHeight;
-                    line-height: $boardsListItemHeight;
-                    font-size: $fontSize-small;
-                    padding-left: 15px;
-                    border-bottom: 1px solid $color-lightTransparentBlack;
-
-                    @include mobile {
-                        height: $boardsListItemHeightMobile;
-                        line-height: $boardsListItemHeightMobile;
-                        font-size: $fontSize-large;
-                    }
-
-                    @include tablet {
-                        height: $boardsListItemHeightTablet;
-                        line-height: $boardsListItemHeightTablet;
-                        font-size: $fontSize-large;
-                    }
-
-                    &:hover {
-                        background-color: $color-lightTransparentBlack;
-                    }
-
-                    .tool-button {
-                        position: relative;
-                        float: right;
-                        border: none;
-                        height: $boardsListItemHeight;
-                        width: $boardsListItemHeight;
-                        line-height: $boardsListItemHeight;
-                        text-align: center;
-                        font-weight: $fontWeight-bold;
-                        background-color: $color-veryLightTransparentBalck;
-                        top: 0;
-                        right: 0;
-                        transition: $time-defaultFastTransition;
-                        cursor: pointer;
-
-                        @include mobile {
-                            height: $boardsListItemHeightMobile;
-                            width: $boardsListItemHeightMobile;
-                            line-height: $boardsListItemHeightMobile;
-                        }
-
-                        @include tablet {
-                            height: $boardsListItemHeightTablet;
-                            width: $boardsListItemHeightTablet;
-                            line-height: $boardsListItemHeightTablet;
-                        }
-
-                        &:hover {
-                            background-color: $color-lightTransparentBlack;
-                        }
-
-                        &.remove {
-                            @include background('remove-white.svg');
-                        }
-
-                        &.edit {
-                            @include background('edit-white.svg');
-                        }
-
-                        &.save {
-                            @include background('save-white.svg');
-                        }
-
-                        &:last-child {
-                            border-right: 1px solid $color-lightTransparentBlack;
-                        }
-                    }
-                }
-            }
-        }
 
         .board {
             @include flex(100%, flex-start, flex-start, auto, row nowrap);
@@ -240,186 +104,11 @@ body {
             }
         }
 
-        .column-tools {
-            @include flex(0 0 60px, center, flex-end, center, row nowrap);
-            height: 24px;
-            padding-right: 10px;
-            transition: $time-defaultTransition;
-            opacity: 0;
-        }
-
-        .board-col {
-            @include flex(1, flex-start, flex-start, auto, row nowrap);
-            @include width-limits($size-boardColumnMinWidth, $size-boardColumnMaxWidth);
-            display: inline-block;
-            margin: 0 10px;
-            padding: 5px;
-            background-color: $color-boardBackground;
-            transition: .5s;
-
-            @include mobile {
-                @include width-limits($size-boardColumnMinWidthMobile, $size-boardColumnMaxWidthMobile);
-            }
-
-            @include tablet {
-                @include width-limits($size-boardColumnMinWidthTablet, $size-boardColumnMaxWidthTablet);
-            }
-
-            &:hover,
-            &.current
-            {
-                background-color: $color-boardBackgroundHover;
-
-                .col-header > .column-tools {
-                    opacity: 1;
-                }
-            }
-
-            .board-col-content {
-                @include flex(0 0 100%, flex-start, flex-start, auto, column nowrap);
-            }
-        }
-
-        .col-header {
-            @include flex(0 0 $size-boardColumnHeaderHeight, center, center, auto, row nowrap);
-            @include font-pacifico();
-            @include text-truncate();
-            width: calc(100% - 5px);
-            margin: -5px;
-            padding-left: 15px;
-            background-color: $color-lightTransparentBlack;
-            color: $color-primaryWhite;
-            line-height: $size-boardColumnHeaderHeight;
-            font-size: $fontSize-large;
-        }
-
-        .column-title {
-            @include flex(1, center, flex-start, center, row nowrap);
-            @include text-truncate();
-            margin-right: 20px;
-        }
-
-        .col-items-holder {
-            @include flex(1, center, center, auto, row nowrap);
-            width: 100%;
-            padding: 10px 0 5px;
-            overflow-x: hidden;
-        }
-
-        .col-items-wrap {
-            @include flex(1, flex-start, flex-start, auto, column nowrap);
-            padding: 0 5px;
-            overflow-y: scroll;
-            margin-right: -15px;
-            max-height: calc(100vh - 120px);
-
-            div::-webkit-scrollbar {
-                width: 15px;
-            }
-
-            .col-item-wrap {
-                @include flex(100%, flex-start, flex-start, flex-start, column nowrap);
-                display: block;
-                max-width: 100%;
-            }
-        }
-
         .item-tools {
             @include flex(0 0 50px, center, flex-end, auto, row nowrap);
             margin-left: 5px;
             opacity: 0;
             transition: $time-defaultTransition;
-            height: 24px;
-        }
-
-        .col-item {
-            @include font-varela();
-            @include flex(0 0 auto, flex-start, flex-start, auto, row wrap);
-            @include height-limits($ticketMinHeight);
-            border: 1px solid transparent;
-            transition: $time-defaultTransition;
-            background-color: $color-veryLightTransparentBalck;
-            margin: 0 4px 5px 0;
-            padding: 5px;
-
-            @media screen and (-webkit-min-device-pixel-ratio:0){
-                margin: 0 12px 5px 0;
-            }
-
-            &.current {
-                border: 1px solid white;
-            }
-
-            &.special-item {
-                @include small-box-shadow($color-defaultShadowHover);
-                @include height-limits(120px);
-                background-color: $color-boardSpecialElementBackground;
-
-                &:hover {
-                    background-color: $color-boardSpecialElementBackgroundHover;
-                }
-            }
-
-            &.red {
-                @include element-background($color-ticketColorRed, $color-ticketColorRedActive);
-            }
-
-            &.green {
-                @include element-background($color-ticketColorGreen, $color-ticketColorGreenActive);
-            }
-
-            &.blue {
-                @include element-background($color-ticketColorBlue, $color-ticketColorBlueActive);
-            }
-
-            &.purple {
-                @include element-background($color-ticketColorPurple, $color-ticketColorPurpleActive);
-            }
-
-            &.yellow {
-                @include element-background($color-ticketColorYellow, $color-ticketColorYellowActive);
-            }
-
-            &.orange {
-                @include element-background($color-ticketColorOrange, $color-ticketColorOrangeActive);
-            }
-
-            &:hover,
-            &.current
-            {
-                background-color: $color-lightTransparentBlack;
-
-                .item-header > .item-tools {
-                    opacity: 1;
-                }
-            }
-
-            .item-description {
-                @include height-limits($ticketDescriptionMinHeight);
-                margin-top: 5px;
-                line-height: 16px;
-                color: $color-primaryWhite;
-                font-size: $fontSize-small;
-                margin-left: 10px;
-                max-width: 90%;
-                overflow-y: hidden;
-            }
-        }
-
-        .item-header {
-             @include flex(0 0 100%, flex-start, flex-start, auto, row nowrap);
-             height: 24px;
-             border-bottom: 1px solid $color-lightTransparentBlack;
-         }
-
-        .item-title {
-            @include text-truncate();
-            display: block;
-            text-transform: uppercase;
-            line-height: 26px;
-            color: $color-primaryWhite;
-            font-size: $fontSize-medium;
-            margin-left: 10px;
             height: 24px;
         }
     }
